k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: section-enged-deployment
  labels:
    app: section-enged
spec:
  replicas: 6
  selector:
    matchLabels:
      app: section-enged
  template:
    metadata:
      labels:
        app: section-enged
    spec:
      containers:
        - name: section-enged
          image: rosechege/hugo_app
          imagePullPolicy: Always
          ports:
          - containerPort: 1313
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: section-enged-service
  name: section-enged-service
  namespace: default
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: section-enged
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
----

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: section-enged-ingress
  namespace: default
spec:
  ingressClassName: section-enged
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: section-enged-service
            port:
              number: 80
